[package]
name = "banner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.10.0"
derivative = "2.2.0"
image = "0.24.5"
itertools = "0.10.5"
libc = "0.2.139"
md5 = "0.7.0"
ninty77 = { path = "../../ninty77" }
